# My3DEngine

./: CMakeLists.txt  README.md  conanfile.txt
include/: test.h
include/Engine/: engine.h  import.h  mesh.h  navigation.h  object.h  scene.h  shader.h  viewport.h
resources/shaders/: lightshader.frag  phongshader.frag  shaders.qrc  simpleshader.frag  simpleshader.vert
resources/shaders/lightshader/: lightshader.vert
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  test.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  engine.cpp  import.cpp  import.h  mesh.cpp  mesh.h  navigation.cpp  object.cpp  object.h  scene.cpp  shader.cpp  shader.h  viewport.cpp  viewport.h
src/Engine/Importer/: CMakeLists.txt  Import.cpp  Import.h
src/Engine/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h
src/Engine/NavigationSystem/: CMakeLists.txt  Navigation.cpp  Navigation.h  navigation.cpp
src/Engine/Object/: CMakeLists.txt  Object.cpp  Object.h
src/Engine/Scene/: BaseScene.h  CMakeLists.txt  Scene.cpp  Scene.h  scene.cpp  scene.h
src/Engine/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
src/Engine/Viewport/: CMakeLists.txt  Viewport.cpp  Viewport.h
src/UI/: CMakeLists.txt  MainWindow.cpp  mainwindow.cpp
src/resources/models/: models.qrc
src/resources/shaders/phongshader/: phongshader.vert
tests/: CMakeLists.txt  test.cpp
tests/EngineTest/: CMakeLists.txt  EngineTest.cpp  test_file.txt
tests/EngineTest/ImportTest/: CMakeLists.txt  ImporterTest.cpp
tests/EngineTest/test_dir/: CMakeLists.txt  test_link_file.txt
