cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(SovietGameEngine LANGUAGES CXX)

set(CMAKE_CXX_CLANG_TIDY)

# C++ properties
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
	${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY
	${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
	${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

find_package(Qt5 COMPONENTS Widgets Core Gui OpenGL REQUIRED)
find_package(OpenGL REQUIRED OpenGL)
find_package(Boost REQUIRED COMPONENTS unit_test_framework)
find_package(assimp REQUIRED)

add_subdirectory(src)
add_subdirectory(tests)
